Fix app header and group header alignment

--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -20,12 +20,12 @@
     justify-content: space-between;
     align-items: center;
 
-    padding-inline-start: 8px;
 
     background-color: $bgclr1;
     height: 48px;
     border-bottom: 1px solid rgba(159, 173, 188, 0.16);
     padding: 8px;
+    padding-inline-start: 12px;
 
     margin: auto;
 
